The project is fine-tuned for deployment.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,35 +5,37 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>ChatGVD</title>
+  <title>SpeakGPT</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
-
-  <!-- <h2 class="mt-4 text-light">Transcript</h2>
-    <div class="p-3" style="border: 1px solid gray; height: 300px; border-radius: 8px;">
-      <span id="final" class="text-light"></span>
-      <span id="interim" class="text-secondary"></span>
+  <header>
+    <div class="header">
+      <a class="logo">SpeakGPT - AI Voice and Chat Bot</a>
     </div>
-    <div class="mt-4">
-      <button class="btn btn-success" id="start">Start</button>
-      <button class="btn btn-danger" id="stop">Stop</button>
-      <p id="status" class="lead mt-3 text-light" style="display: none">Listenting ...</p>
-    </div> -->
-
+  </header>
   <div id="app">
     <div id="chat_container"></div>
-    <h3>This is an AI Chatbot built by Vishnudhasan Govindarajan!</h3>
-    <form>
 
+    <p id="instructions">Click on the speak button</p>
+    <form>
       <textarea id="textbox" name="prompt" rows="1" cols="1" placeholder="Ask me anything!"></textarea>
       <button id="start-btn" type="submit"><img src="assets/send.svg" alt="send" />
-        <p id="instructions">Click the speak button</p>
+
         <button id="speak-btn" type="button"><img src="assets/microphone.svg" alt="microphone" />
-          <button id="stop" type="button"><img src="assets/mic-off.svg" alt="microphone" />
+          <!-- <button id="stop" type="button"><img src="assets/mic-off.svg" alt="microphone" /> -->
     </form>
   </div>
+
+  <footer>
+    <div class="bottom-details">
+      <div class="bottom_text">
+        <span class="copyright_text">Copyright © 2023 <a href="https://www.linkedin.com/in/vishnudhasan-govindarajan/">Vishnudhasan Govindarajan</a>All rights
+          reserved</span>
+      </div>
+    </div>
+  </footer>
 </body>
 
 <script type="module" src="main.js"></script>
